created business logic for car post and patch endpoints
